
* #13712: Introduce a new kind `Type_external` and syntax
  `type t = external "name"` to discriminate external types from other types
  and each other.  This PR turns primitive types into external and removes the
  past behavior of discriminating abstract types defined in the current module.
  (Takafumi Saikawa, Jacques Garrigue, review by Richard Eisenberg)

### Runtime system:

- #13574, #13594: Generational scanning of stack frames for ARM 64 bits, POWER,
  and RISC-V.  This reduces minor GC work in the presence of deep call stacks.
  (Xavier Leroy, review by Miod Vallat, Gabriel Scherer and Olivier Nicole)

### Code generation and optimizations:

### Standard library:

- #13728: Add Sys.runtime_executable containing the full path (if available) to
  the currently executing runtime.
  (David Allsopp, review by Nicolás Ojeda Bär and Daniel Bünzli)

- #13916: Add Option.product and Option.Syntax.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Gabriel Scherer and David
  Allsopp)

- #13995: Add Option.blend.
  (Kate Deplaix, review by Daniel Bünzli, Gabriel Scherer,
   Nicolás Ojeda Bär, Florian Angeletti and Josh Berdine)

### Type system:

- #13781: Set scope of internal type nodes during abbreviation expansion
  rather than recursing during unification.
  (Jacques Garrigue, review by Gabriel Scherer)

* #13830: fail rather than silently create abstract module types when avoiding
  (i.e. hiding) signature items, as in:
  ```ocaml
    module N = struct
      open (struct type t = A | B end)
      module type T = sig type u = t * int end
    end
  ```
  Before, it was succeeding with `module N : sig module type T end`, now it
  fails. Similarly for anonymous functor calls (of the form `F(struct ... end))
  (Clement Blaudeau, review by Gabriel Scherer)

### Other libraries:

* #14046: On Windows, `Unix.kill pid Sys.sigkill` causes the receiving process
  to exit with code ERROR_PROCESS_ABORTED (1067) instead of 0.